// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`colorInterpolationFilters renders 0 1`] = `
Array [
  .c0 {
  color-interpolation-filters: 0;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: 0;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: 0;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`colorInterpolationFilters renders function 1`] = `
Array [
  .c0 {
  color-interpolation-filters: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: has;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: has;
}

<div
    className="c0"
  />,
]
`;

exports[`colorInterpolationFilters renders invalid theme path 1`] = `
Array [
  .c0 {
  color-interpolation-filters: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`colorInterpolationFilters renders negative number 1`] = `
Array [
  .c0 {
  color-interpolation-filters: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`colorInterpolationFilters renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color-interpolation-filters: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color-interpolation-filters: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color-interpolation-filters: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    color-interpolation-filters: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    color-interpolation-filters: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`colorInterpolationFilters renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    color-interpolation-filters: July;
  }
}

@media April {
  .c0 {
    color-interpolation-filters: August;
  }
}

@media January {
  .c0 {
    color-interpolation-filters: September;
  }
}

@media April {
  .c0 {
    color-interpolation-filters: November;
  }
}

@media June {
  .c0 {
    color-interpolation-filters: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    color-interpolation-filters: July;
  }
}

@media April {
  .c0 {
    color-interpolation-filters: August;
  }
}

@media January {
  .c0 {
    color-interpolation-filters: September;
  }
}

@media April {
  .c0 {
    color-interpolation-filters: November;
  }
}

@media June {
  .c0 {
    color-interpolation-filters: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    color-interpolation-filters: January;
  }
}

@media April {
  .c0 {
    color-interpolation-filters: December;
  }
}

@media January {
  .c0 {
    color-interpolation-filters: April;
  }
}

@media April {
  .c0 {
    color-interpolation-filters: May;
  }
}

@media June {
  .c0 {
    color-interpolation-filters: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    color-interpolation-filters: January;
  }
}

@media April {
  .c0 {
    color-interpolation-filters: December;
  }
}

@media January {
  .c0 {
    color-interpolation-filters: April;
  }
}

@media April {
  .c0 {
    color-interpolation-filters: May;
  }
}

@media June {
  .c0 {
    color-interpolation-filters: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`colorInterpolationFilters renders postitive number 1`] = `
Array [
  .c0 {
  color-interpolation-filters: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`colorInterpolationFilters renders string 1`] = `
Array [
  .c0 {
  color-interpolation-filters: July;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: July;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: June;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: June;
}

<div
    className="c0"
  />,
]
`;

exports[`colorInterpolationFilters renders valid theme path 1`] = `
Array [
  .c0 {
  color-interpolation-filters: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  color-interpolation-filters: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
